--- a/Analisando_os_Dados_do_Airbnb_Seattle.ipynb
+++ b/Analisando_os_Dados_do_Airbnb_Seattle.ipynb
@@ -1563,7 +1563,7 @@
         "\n",
         "Estas características revelam a alta concentração de imóveis para locação no Airbnb sendo, inclusive, elevada a média de imóveis por anfitrião na cidade.\n",
         "\n",
-        "Em uma cidade desse porte, que é berço de empresas como Microsoft e Amazon, é de se esperar um mercado imobiliário aquecido. Com o Airbnb não poderia ser diferente, afinal, são milhares de pessoas indo para lá a passeio e/ou a trabalho em todo tempo!\n",
+        "Em uma cidade desse porte, que é berço de empresas como Microsoft e Amazon, é de se esperar um mercado imobiliário aquecido. Com o Airbnb não poderia ser diferente, afinal, são milhares de pessoas indo para lá a passeio e/ou a trabalho a todo tempo!\n",
         "\n",
         "\n",
         "\n",
